--- a/TP01.html
+++ b/TP01.html
@@ -9,11 +9,16 @@
       <img width="96px" src="icon.png" />
       <h3>Hello, I'm vanny!</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br> 
-        sed do eiusmod tempor incididunt ut labore et dolore <br>magna  aliqua. 
-        Ut enim ad minim veniam, quis nostrud<br> exercitation ullamco   laboris 
-        nisi ut aliquip ex ea commodo<br>  consequat.Duis aute irure dolor  in 
-        reprehenderit in voluptate<br>  velit esse cillum dolore eu fugiat nulla pariatur.
+        Lorem ipsum dolor sit amet, consegctetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna  aliqua. 
+        Ut enim ad minim veniam, quis nostrudexercitation ullamco   laboris 
+        nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor  in 
+        reprehenderit in voluptate  velit esse cillum dolore eu fugiat nulla pariatur.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna  aliqua. 
+        Ut enim ad minim veniam, quis nostrudexercitation ullamco   laboris 
+        nisi ut aliquip ex ea commodo consequat.Duis aute irure dolor  in 
+        reprehenderit in voluptate  velit esse cillum dolore eu fugiat nulla pariatur.
       </p>
    
    <div align="center">
